# game

./: .gitignore  CMakeLists.txt
inc/: BoxCollider.h  Collider.h  DisplayManager.h  MovableObject.h  Object.h  Player.h  PlayerController.h  Point.h  Type.h
src/: BoxCollider.cpp  Collider.cpp  DisplayManager.cpp  MovableObject.cpp  Object.cpp  Player.cpp  PlayerController.cpp  Point.cpp  main.cpp
tests/: BoxColliderTest.cpp  PlayerTest.cpp  PointTest.cpp
